# jarvis-dictation

./: .gitignore  COMMANDS.md  README.md  jarvis_dictation_app.py  pyproject.toml  setup_app.py
jarvis_dictation/: __init__.py  app.py  mac_app.py  model_manager.py  model_server.py  models.py  permissions.py  preferences.py  prepare.py  run.py  service.py  shortcuts.py
jarvis_dictation/assets/sounds/: LICENSE.txt
